updated several files