@@ -2,7 +2,7 @@ page_title: Languages
 page_description: supported languages on Shippable
 page_keywords: languages, questions, documentation, shippable, ruby, node, java, .net, python, scala
 
-# Language Specific Help
+# Languages
 
 We support the following languages on Shippable CI:
 
@@ -16,131 +16,122 @@ We support the following languages on Shippable CI:
 -  [scala](#scala)
 
 
-This list keeps growing and if you need something that you dont see
-here, drop us a line at support @ shippable.com
+This list keeps growing so if you need something that you don't see
+here, contact our [support alias](mailto:support@shippable.com) or open a support issue in our [GitHub support repo](https://github.com/Shippable/support/issues)
 
 ## Clojure
 
-This section helps you to create a shippable.yml file for your clojure
-project:
+### Standard build image(s)
+By default, we will run your Clojure build using our standard ubuntu 14.04 Clojure image pre-installed with all supported tools and services. The image is called u14cloall and the Dockerfile is in our [GitHub dry-dock repository](https://github.com/dry-dock/u14cloall). The Docker image will be pulled from our [drydock repo on Docker Hub](https://hub.docker.com/r/drydock/u14cloall/)
 
-- Set the appropriate language and the version number. Clojure minions use `lein` by default to set the runtime platform:
+The default build image for Go has the following versions installed:
+
+* 1.3.0
+* 1.4.0
+* 1.5.1
+* 1.6.0
+
+In addition we have the following additional standard Clojure images:
+
+* u12clo    
+    * [GitHub](https://github.com/dry-dock/u12clo)    
+    * [Docker Hub](https://hub.docker.com/r/drydock/u12clo/)
+* u14clo    
+    * [GitHub](https://github.com/dry-dock/u14clo)    
+    * [Docker Hub](https://hub.docker.com/r/drydock/u14clo/)
+* u12clopls    
+    * [GitHub](https://github.com/dry-dock/u12clopls)    
+    * [Docker Hub](https://hub.docker.com/r/drydock/u12clopls/)
+* u14clopls    
+    * [GitHub](https://github.com/dry-dock/u14clopls)    
+    * [Docker Hub](https://hub.docker.com/r/drydock/u14clopls/) 
+* u12cloall    
+    * [GitHub](https://github.com/dry-dock/u12cloall)    
+    * [Docker Hub](https://hub.docker.com/r/drydock/u12cloall/)
+
+You can use a custom build image for your project by following instructions in our [yml configuration section](ci_configure.md).
+
+
+### yml config
+
+You can use the `install` key to install the required dependencies for your project:
 
 ```
-# language setting
-language: clojure
-# lein tag
-lein: lein2
+install: lein protobuf install
 ```
-
-- Use **install** key to install the required dependencies for your project:
-
-        install: lein protobuf install
 
 ### Test scripts
 
-Use **script** key in shippable.yml file to specify what command to run tests with. The default command to run leiningen test suite is **lein test2junit**:
+Use `script` key in shippable.yml file to specify what command to run tests with. The default command to run leiningen test suite is `lein test2junit`:
 
 ```
 script: lein test2junit
 ```
 
+### Build Matrix
+As with any JVM language, you can test Clojure builds against multiple JDKs.
+
+`env`, `lein`, and `jdk` can be given as arrays to construct a build matrix. For example,
+
+```
+language: clojure
+lein: lein2
+jdk:
+  - openjdk7
+  - oraclejdk7
+  - oraclejdk8
+```
+
 ### Build Examples
 
-This sample will help you get started with Shippable. The testing
-framework used here is [test2junit](https://clojars.org/test2junit).
 
-[Clojure Sample](https://github.com/shippableSamples/sample_clojure)
-
-[Clojure Sample with
-MongoDB](https://github.com/shippableSamples/sample_clojure_mongodb)
-
-[Clojure Sample with
-PostgreSQL](https://github.com/shippableSamples/sample_clojure_postgres)
-
-Copy the test and code coverage output into the special folders
-Shippable/testresults and Shippable/codecoverage to get the reports
-parsed. The test report must be in the JUnit XML format and code
-coverage report in the Cobertura XML format.
-
-We need the yml file to analyze your project details. So add the
-shippable.yml file to the root of your repo by specifying:
-
-**language :** Clojure is used in this sample project
-
-**lein :** lein2 is the version of Leinigen used in this sample project.
-
-Here is the complete yml file for sample_clojure:
-
-```yaml
-# Language setting
-language: clojure
-
-lein:
-  - lein2
-
-# Create directories for test and coverage reports
-before_script:
-  - mkdir -p shippable/testresults
-  - mkdir -p shippable/codecoverage
-
-# Running the test with Leiningen
-script:
-  - cd sample
-  - lein test2junit
-```
-
-Enable the repo sample_clojure and run it using an Ubuntu minion. Once
-the build finishes execution, you can check for the console output, test
-and codecoverage results on the respective build's page.
-
-### Build Image
-
-The build image available for clojure is
-[shippableimages/ubuntu1204_clojure](https://registry.hub.docker.com/u/shippableimages/ubuntu1204_clojure) ([Dockerfile](https://github.com/shippableImages/ubuntu1204_clojure/blob/master/Dockerfile))
-
-The lein version available in this image is lein2. You can use this image to run clojure builds.
-
-Go to your **Project Page**, click on **Settings** and choose the following image:
-
-`Pull Image from : shippableimages/ubuntu1204_clojure`
-
-A sample yml that helps you getting started with clojure image:
-
-```yaml
-language: clojure
-
-lein:
-  - lein2
-
-script:
-  - lein test2junit
-```
-
-Refer [sample_ubuntu1204_clojure](https://github.com/shippableSamples/sample_ubuntu1204_clojure) on github for more details.
-
----------
 
 ## Go
 
-This section helps you to create a shippable.yml file for your GO
-project:
+### Standard build image(s)
+By default, we will run your Go build using our standard ubuntu 14.04 Go image pre-installed with all supported tools and services. The image is called u14golall and the Dockerfile is in our [GitHub dry-dock repository](https://github.com/dry-dock/u14golall). The Docker image will be pulled from our [drydock repo on Docker Hub](https://hub.docker.com/r/drydock/u14golall/)
 
-- Set the appropriate language and the version number. You can test against multiple versions for a single push by adding more entries. GO minions use `go` by default to set the runtime platform:
+The default build image for Go has the following versions installed:
 
+* 1.1
+* 1.2
+* 1.3
+* 1.4
+* 1.5
+* tip
+
+In addition we have the following additional standard Go images:
+
+* u12gol    
+    * [GitHub](https://github.com/dry-dock/u12gol)    
+    * [Docker Hub](https://hub.docker.com/r/drydock/u12gol/)
+* u14gol    
+    * [GitHub](https://github.com/dry-dock/u14gol)    
+    * [Docker Hub](https://hub.docker.com/r/drydock/u14gol/)
+* u12golpls    
+    * [GitHub](https://github.com/dry-dock/u12golpls)    
+    * [Docker Hub](https://hub.docker.com/r/drydock/u12golpls/)
+* u14golpls    
+    * [GitHub](https://github.com/dry-dock/u14golpls)    
+    * [Docker Hub](https://hub.docker.com/r/drydock/u14golpls/) 
+* u12golall    
+    * [GitHub](https://github.com/dry-dock/u12golall)    
+    * [Docker Hub](https://hub.docker.com/r/drydock/u12golall/)
+
+You can use a custom build image for your project by following instructions in our [yml configuration section](ci_configure.md).
+
+### yml config
+
+You can use any tagged version(s) of Go or use ```tip``` to get the latest version.
 ```
-# language setting
 language: go
-# version numbers
+
 go:
-- 1.1
-- 1.2
-- 1.3
-- release
-- tip
+  - 1.3
+  - tip
 ```
 
-- Install dependencies for your project using the **install** key:
+You can install dependencies for your project using the **install** key:
 
 ```
 install:
@@ -159,119 +150,44 @@ script: go test -v ./...
 
 ### Build Examples
 
-This sample will help you get started with Shippable. The testing
-framework used here is [Ginkgo](http://onsi.github.io/ginkgo/).
 
-[Go Sample](https://github.com/shippableSamples/sample_go)
 
-[Go Sample with MongoDB](https://github.com/shippableSamples/sample_go_mongo)
-
-[Go Sample with PostgreSQL](https://github.com/shippableSamples/sample_go_postgres)
-
-Copy the test and code coverage output into the special folders
-Shippable/testresults and Shippable/codecoverage to get the reports
-parsed. The test report must be in JUnit format.
-
-We need the yml file to analyze your project details. So add the
-shippable.yml file to the root of your repo by specifying:
-
-**language :** Go is used in this sample project
-
-**version number :** 1.2 is the version used in this sample project.
-
-Here is the complete yml file for sample_go
-
-```yaml
-language: go
-
-go:
-  - 1.2
-
-install:
-  - go get code.google.com/p/go.tools/cmd/cover
-
-# Make folders for the reports
-before_script:
-  - mkdir -p shippable/testresults
-  - mkdir -p shippable/codecoverage
-
-script:
-  - export GOPATH=$PWD
-  - export PATH=$PATH:$GOPATH/bin
-  - go get github.com/t-yuki/gocover-cobertura
-  - go get github.com/onsi/gomega
-  - go get github.com/onsi/ginkgo
-  - go install github.com/OneRedOak/sample
-  - go test -coverprofile=coverage.txt -covermode count github.com/OneRedOak/sample
-  - gocover-cobertura < coverage.txt > coverage.xml
-
-after_script:
-  - mv $PWD/src/github.com/OneRedOak/sample/junit.xml $PWD/shippable/testresults/
-  - mv $PWD/coverage.xml $PWD/shippable/codecoverage/
-```
-
-Enable the repo sample_go and run it using an Ubuntu minion. Once the
-build finishes execution, you can check for the console output, test and
-codecoverage results on the respective build's page.
-
-### Build Image
-
-The following build images are available for GOLANG :
-
-1. [shippableimages/ubuntu1204_go](https://registry.hub.docker.com/u/shippableimages/ubuntu1204_go) ([Dockerfile](https://github.com/shippableImages/ubuntu1204_go/blob/master/Dockerfile))
-2. [shippableimages/ubuntu1404_go](https://registry.hub.docker.com/u/shippableimages/ubuntu1404_go) ([Dockerfile](https://github.com/shippableImages/ubuntu1404_go/blob/master/Dockerfile))
-
-The go versions available in these images are:
-
-- 1.1
-- 1.2
-- 1.3
-- tip
-- release
-
-Go to your **Project Page**, click on **Settings** and choose the following image:
-
-`Pull Image from : shippableimages/ubuntu1204_go`
-
-Activate gvm in before_install section to run your build against the correct version of go.
-
-A sample yml that helps you getting started with go image:
-
-```yaml
-language: go
-
-go:
-  - 1.2
-  - 1.3
-
-before_install:
-  - source $HOME/.gvm/scripts/gvm;
-  - if [[ $SHIPPABLE_GO_VERSION == "tip" ]]; then gvm install tip; gvm use tip; fi
-  - if [[ $SHIPPABLE_GO_VERSION == *release* ]]; then gvm install release; gvm use release; fi
-  - if [[ $SHIPPABLE_GO_VERSION =~ [0-9].[0-9] ]]; then gvm install go$SHIPPABLE_GO_VERSION; gvm use go$SHIPPABLE_GO_VERSION; fi
-  - export GOPATH=$SHIPPABLE_GOPATH
-
-  - go get github.com/t-yuki/gocover-cobertura
-  - go get github.com/onsi/gomega
-  - go get github.com/onsi/ginkgo
-  - go get code.google.com/p/go.tools/cmd/cover
-
-install:
-  - go get -d -v ./... && go build -v ./...
-
-script:
-  - go test -coverprofile=coverage.txt -covermode count ./
-  - $GOPATH/bin/gocover-cobertura < coverage.txt > shippable/codecoverage/coverage.xml
-```
-
-Refer [sample_ubuntu1204_go](https://github.com/shippableSamples/sample_ubuntu1204_go)
-on github for more details.
 
 ## Java
 
-This section helps you to create a shippable.yml file for your Java project:
+### Standard build image(s)
+By default, we will run your Java build using our standard ubuntu 14.04 Java image pre-installed with all supported tools and services. The image is called u14javall and the Dockerfile is in our [GitHub dry-dock repository](https://github.com/dry-dock/u14javall). The Docker image will be pulled from our [drydock repo on Docker Hub](https://hub.docker.com/r/drydock/u14javall/)
 
-- Set the appropriate language and the jdk. You can test against Openjdk6, Openjdk7, Oraclejdk7 and Oraclejdk8 for a single push by adding more entries. Java minions use `jdk` by default to set the runtime platform:
+The default build image for Java has the following versions installed:
+
+* openjdk6
+* openjdk7
+* oraclejdk7
+* oraclejdk8
+
+In addition we have the following additional standard Java images:
+
+* u12jav    
+    * [GitHub](https://github.com/dry-dock/u12jav)    
+    * [Docker Hub](https://hub.docker.com/r/drydock/u12jav/)
+* u14jav    
+    * [GitHub](https://github.com/dry-dock/u14jav)    
+    * [Docker Hub](https://hub.docker.com/r/drydock/u14jav/)
+* u12javpls    
+    * [GitHub](https://github.com/dry-dock/u12javpls)    
+    * [Docker Hub](https://hub.docker.com/r/drydock/u12javpls/)
+* u14javpls    
+    * [GitHub](https://github.com/dry-dock/u14javpls)    
+    * [Docker Hub](https://hub.docker.com/r/drydock/u14javpls/) 
+* u12javall    
+    * [GitHub](https://github.com/dry-dock/u12javall)    
+    * [Docker Hub](https://hub.docker.com/r/drydock/u12javall/)
+
+You can use a custom build image for your project by following instructions in our [yml configuration section](ci_configure.md).
+
+### yml config
+
+Set the appropriate language and the jdk. You can test against Openjdk6, Openjdk7, Oraclejdk7 and Oraclejdk8 for a single push by adding more entries. Java minions use `jdk` by default to set the runtime platform:
 
 ```
 # language setting
@@ -288,7 +204,7 @@ jdk:
 
 #### Maven
 
-- If your repository root has pom.xml file, then our Java builder will use Maven 3 to build it. By default it will run the test using **mvn test**.
+- If your repository root has pom.xml file, then our Java builder will use Maven 3 to build it. By default it will run the test using `mvn test`.
 - Java builder will execute the below line to install project dependencies with Maven before it starts running tests.
 
 ```
@@ -297,7 +213,7 @@ mvn install -DskipTests=true
 
 #### Gradle
 
-- If your repository root has "build.gradle", then our Java builder will use gradle to build it. By default it will use **gradle check** to run the test.
+- If your repository root has "build.gradle", then our Java builder will use gradle to build it. By default it will use `gradle check` to run the test.
 - Java builder will execute the below line to install the project dependencies with gradle.
 
 ```
@@ -306,8 +222,8 @@ gradle assemble
 
 #### Ant
 
-- If your repository root does not have gradle or maven files, then our Java builder will use Ant to build it. By default it will use **Ant test** to run the test suite.
-- Since there is no standard way to install Ant dependencies, you will need to specify the **install:** key to install your project dependencies with Ant.
+- If your repository root does not have gradle or maven files, then our Java builder will use Ant to build it. By default it will use `Ant test` to run the test suite.
+- Since there is no standard way to install Ant dependencies, you will need to specify the `install:` key to install your project dependencies with Ant.
 
 ```
 language: java
@@ -318,121 +234,6 @@ Save the test output in shippable/testresults and the codecoverage output in shi
 
 ### Build Examples
 
-The goal of this code samples is to show you how to set up and build
-your repo on shippable. These projects use [cobertura](http://cobertura.github.io/cobertura/) and [Junit](http://junit.org/).
-
-[Java Sample](https://github.com/shippableSamples/sample_java)
-
-[Java Sample with multi-module Maven
-build](https://github.com/shippableSamples/sample-java-maven-reactor)
-
-[Java Sample with
-MySQL](https://github.com/shippableSamples/sample_java_mysql)
-
-[Java Sample with
-Postgres](https://github.com/shippableSamples/sample_java_postgres)
-
-[Java Sample with
-MongoDB](https://github.com/shippableSamples/sample_java_mongo)
-
-Keep the test and code coverage output in the special folders
-Shippable/testresults and Shippable/codecoverage to get parsed reports.
-Test results must be in Junit format.
-
-We need the yml file to analyze the project details. So add the
-shippable.yml file to the root of your repo by specifying:
-
-**language :** Specify the language used to create the project. Java is
-used in this sample project.
-
-**jdk :** Specify the jdk against which your build needs to run. The
-sample uses oraclejdk7, openjdk6 and openjdk7.
-
-**script :** Specify the command to run the test and code coverage using
-the script key. Specify the path of the output files
-(shippable/testresults and shippable/codecoverage) in the
-"build.properties" file for this project.
-
-**notification alerts:** Email notifications are added to get alerts
-about the build status.
-
-This is the complete yml file for sample_java project:
-
-```yaml
-language: java
-
-jdk:
-   - openjdk7
-   - oraclejdk7
-   - openjdk6
-   - oraclejdk8
-
-after_success:
-   - mvn clean cobertura:cobertura
-   - mvn test
-
-notifications:
-  email:
-    recipients:
-      - exampleone@org.com
-      - exampletwo@org.com
-```
-
-Create a project by enabling the repo sample_java and run it using an
-Ubuntu minion. Once the build finishes execution, you can check for the
-console output, test and codecoverage results on the respective build's
-page.
-
-### Build Image
-
-The following build images are available for Java:
-
-1. [shippableimages/ubuntu1204_java](https://registry.hub.docker.com/u/shippableimages/ubuntu1204_java) ([Dockerfile](https://github.com/shippableImages/ubuntu1204_java/blob/master/Dockerfile))
-2. [shippableimages/ubuntu1404_java](https://registry.hub.docker.com/u/shippableimages/ubuntu1404_java) ([Dockerfile](https://github.com/shippableImages/ubuntu1404_java/blob/master/Dockerfile))
-
-The JDK's available in these images are:
-
-- openjdk6
-- openjdk7
-- oraclejdk7
-- oraclejdk8
-
-Go to your **Project Page**, click on **Settings** and choose the following image:
-
-`Pull Image from : shippableimages/ubuntu1204_java`
-
-IMPORTANT: When you are using this custom image, we don't automatically switch JDKs during the build. You will need to do it explicitly within your YML file. Use the environment variable $SHIPPABLE_JDK_VERSION in before_script section to run your build against the correct version.
-
-A sample yml that helps you getting started with java image. Note the before_script section.
-
-```yaml
-language: java
-
-jdk:
-  - openjdk6
-  - openjdk7
-  - oraclejdk7
-  - oraclejdk8
-
-# install maven
-before_install:
-  - apt-get install -y maven
-
-# Activate jdk
-before_script:
-  - if [[ $SHIPPABLE_JDK_VERSION == "openjdk7" ]] ; then export JAVA_HOME="/usr/lib/jvm/java-7-openjdk-amd64"; export PATH="$PATH:/usr/lib/jvm/java-7-openjdk-amd64/bin"; export java_path="/usr/lib/jvm/java-7-openjdk-amd64/jre/bin/java"; fi
-  - if [[ $SHIPPABLE_JDK_VERSION == "oraclejdk7" ]] ; then export JAVA_HOME="/usr/lib/jvm/java-7-oracle"; export PATH="$PATH:/usr/lib/jvm/java-7-oracle/bin"; export java_path="/usr/lib/jvm/java-7-oracle/jre/bin/java"; fi
-  - if [[ $SHIPPABLE_JDK_VERSION == "openjdk6" ]] ; then export JAVA_HOME="/usr/lib/jvm/java-6-openjdk-amd64"; export PATH="$PATH:/usr/lib/jvm/java-6-openjdk-amd64/bin"; export java_path="/usr/lib/jvm/java-6-openjdk-amd64/jre/bin/java"; fi
-  - if [[ $SHIPPABLE_JDK_VERSION == "oraclejdk8" ]] ; then export JAVA_HOME="/usr/lib/jvm/java-8-oracle"; export PATH="$PATH:/usr/lib/jvm/java-8-oracle/bin"; export java_path="/usr/lib/jvm/java-8-oracle/jre/bin/java"; fi
-  - update-alternatives --set java $java_path
-  - java -version
-
-script:
-  - mvn test
-```
-
-Refer [sample_ubuntu1204_java](https://github.com/shippableSamples/sample_ubuntu1204_java)
-on github for more details.
 
 ### Multi-module Maven builds
 
@@ -479,9 +280,36 @@ for details.
 
 ## Nodejs
 
-This section helps you to configure the yml file for your node_js project.
+### Standard build image(s)
+By default, we will run your Node.js build using our standard ubuntu 14.04 Node.js image pre-installed with all supported tools and services. The image is called u14nodall and the Dockerfile is in our [GitHub dry-dock repository](https://github.com/dry-dock/u14nodall). The Docker image will be pulled from our [drydock repo on Docker Hub](https://hub.docker.com/r/drydock/u14nodall/)
 
-- Set the appropriate language and the version number. You can test against multiple versions for a single push by adding more entries. node_js minions use `node_js` by default to set the version.
+The default build image for Node.js has the following versions installed:
+
+* 0.10
+* 0.12
+* 4.2.3
+* iojs 1.0
+* iojs 2.0
+
+In addition we have the following additional standard Node.js images:
+
+* u12nod    
+    * [GitHub](https://github.com/dry-dock/u12nod)    
+    * [Docker Hub](https://hub.docker.com/r/drydock/u12nod/)
+* u14nod    
+    * [GitHub](https://github.com/dry-dock/u14nod)    
+    * [Docker Hub](https://hub.docker.com/r/drydock/u14nod/)
+* u12nodpls    
+    * [GitHub](https://github.com/dry-dock/u12javpls)    
+    * [Docker Hub](https://hub.docker.com/r/drydock/u12javpls/)
+* u14nodpls    
+    * [GitHub](https://github.com/dry-dock/u14nodpls)    
+    * [Docker Hub](https://hub.docker.com/r/drydock/u14nodpls/) 
+* u12nodall    
+    * [GitHub](https://github.com/dry-dock/u12nodall)    
+    * [Docker Hub](https://hub.docker.com/r/drydock/u12nodall/)
+
+You can use a custom build image for your project by following instructions in our [yml configuration section](ci_configure.md). TODO: Add exact link
 
 ```
 # language setting
@@ -491,13 +319,11 @@ language: node_js
 node_js:
   - "0.11"
   - "0.10"
-  - "0.8"
-  - "0.6"
 ```
 
 > **Note**
 >
-> We are setting multiple versions of node_js here which means a single push to repo will trigger multiple builds.
+> Since multiple versions of node.js are specified in the sample config above, a single push to the repository will trigger multiple builds on Shippable.
 
 ### Test scripts
 
@@ -549,144 +375,39 @@ if [[ $SHIPPABLE_NODE_VERSION =~ [0].[6-8] ]]; then npm install -g npm@~1.4.6; f
 
 ### Build Examples
 
-These samples will help you get started with Shippable. Test and
-Coverage tools used here are [istanbul](https://npmjs.org/package/istanbul) and [mocha](https://npmjs.org/package/mocha).
-
-[Node Sample](https://github.com/shippableSamples/sample_node)
-
-[Node Sample with CouchDB](https://github.com/shippableSamples/sample-node-couchdb)
-
-[Node Sample with MongoDB](https://github.com/shippableSamples/sample_node_mongo)
-
-[Node Sample with MySQL](https://github.com/shippableSamples/sample_node_mysql)
-
-[Node Sample with Neo4j](https://github.com/shippableSamples/sample_node_neo4j)
-
-[Node Sample with Postgres](https://github.com/shippableSamples/sample_node_postgres)
-
-[Node Sample with Protractor](https://github.com/shippableSamples/sample_node_protractor)
-
-[Node Sample with RethinkDB](https://github.com/shippableSamples/sample-node-rethinkdb)
-
-[Node Sample with Selenium](https://github.com/shippableSamples/sample_node_selenium)
-
-[Node Sample with SQLite](https://github.com/shippableSamples/sample_node_sqlite)
-
-Keep the test and code coverage output in the special folders
-Shippable/testresults and Shippable/codecoverage to get your reports
-parsed.
-
-We need the yml file to analyze the project details. So add the
-shippable.yml file to the root of your repo by specifying:
-
-**language :** Specify the language used to create the project. node_js
-is used in our project.
-
-**version numbers :** 0.10 is used.
-
-**env:** Specify the xunit output file path using env.
-
-**script:** Specify the command to run tests using script key.
-
-**after_script:** Specify the command to generate code coverage and
-save the results in their respective shippable folder. If you have not
-created the folders, you can create them using the before_script key.
-
-Here is the complete yml file for sample_node project.
-
-```yaml
-# Language setting
-    language: node_js
-
-# Version number
-    node_js:
-      - 0.10.25
-
-# The path for Xunit to output test reports
-env:
-      - XUNIT_FILE=shippable/testresults/result.xml
-
-# Create directories for test and coverage reports
-before_script:
-      - mkdir -p shippable/testresults
-      - mkdir -p shippable/codecoverage
-
-# Running the tests with grunt
-script:
-      - grunt
-
-# Tell istanbul to generate a coverage report
-after_script:
-      - ./node_modules/.bin/istanbul cover grunt -- -u tdd
-      - ./node_modules/.bin/istanbul report cobertura --dir  shippable/codecoverage/
-```
-
-Enable the repo sample_node and run it using an Ubuntu minion. Once the
-build finishes execution, you can check for the console output, test and
-codecoverage results on the respective build's page.
-
-### Build Image
-
-The following build images are available for node.js:
-
-1. [shippableimages/ubuntu1204_nodejs](https://registry.hub.docker.com/u/shippableimages/ubuntu1204_nodejs) ([Dockerfile](https://github.com/shippableImages/ubuntu1204_nodejs/blob/master/Dockerfile))
-2. [shippableimages/ubuntu1404_nodejs](https://registry.hub.docker.com/u/shippableimages/ubuntu1404_nodejs) ([Dockerfile](https://github.com/shippableImages/ubuntu1404_nodejs/blob/master/Dockerfile))
-
-The node.js versions available in these images are:
-
-- 0.8
-- 0.10
-- 0.11
-- 0.12
-
-Go to your **Project Page**, click on **Settings** and choose the following image:
-
-`Pull Image from : shippableimages/ubuntu1204_nodejs`
-
-Activate nvm in before_install section to run your build against the correct version of node.js.
-
-A sample yml that helps you getting started with node.js image:
-
-```yaml
-language: node_js
-
-node_js:
-  - 0.10
-  - 0.11
-
-before_install:
-# Activate the required node.js version
-  - source ~/.nvm/nvm.sh && nvm install $SHIPPABLE_NODE_VERSION
-  - node --version
-  - npm install -g grunt-cli
-
-#install the required dependencies
-install:
-  - npm install
-
-script:
-  - grunt
-```
-
-Refer [sample_ubuntu1204_nodejs](https://github.com/shippableSamples/sample_ubuntu1204_nodejs) on github for more details.
-
 ## PHP
 
-This section helps you to create a shippable.yml file for your php project.
+### Standard build image(s)
+By default, we will run your PHP build using our standard ubuntu 14.04 PHP image pre-installed with latest versions of all supported tools and services. The image is called u14PHPall and the Dockerfile is in our [GitHub dry-dock repository](https://github.com/dry-dock/u14phpall). The Docker image will be pulled from our [drydock repo on Docker Hub](https://hub.docker.com/r/drydock/u14phpall/)
 
-- Set the appropriate language and the version number. You can test against multiple versions for a single push by adding more entries. PHP minions use `php` by default to set the runtime platform.
+The default build image for PHP has the following versions installed:
 
-```
-# language setting
-language: php
-# php tag
-php:
-  - 5.3
-  - 5.4
-  - 5.5
-  - 5.6
-  - hhvm
-```
+* 5.3
+* 5.4
+* 5.5
+* 5.6
+* 
+
+In addition we have the following additional standard PHP images:
+
+* u12php    
+    * [GitHub](https://github.com/dry-dock/u12php)    
+    * [Docker Hub](https://hub.docker.com/r/drydock/u12php/)
+* u14php    
+    * [GitHub](https://github.com/dry-dock/u14php)    
+    * [Docker Hub](https://hub.docker.com/r/drydock/u14php/)
+* u12phppls    
+    * [GitHub](https://github.com/dry-dock/u12phppls)    
+    * [Docker Hub](https://hub.docker.com/r/drydock/u12phppls/)
+* u14phppls    
+    * [GitHub](https://github.com/dry-dock/u14phppls)    
+    * [Docker Hub](https://hub.docker.com/r/drydock/u14phppls/) 
+* u12phpall    
+    * [GitHub](https://github.com/dry-dock/u12phpall)    
+    * [Docker Hub](https://hub.docker.com/r/drydock/u12phpall/)
+
+You can use any custom build image for your project by following instructions in our [yml configuration section](ci_configure.md).
+
 
 ### Test scripts
 
@@ -700,141 +421,48 @@ script: phpunit UnitTest
 >
 > Runs the tests that are provided by the class UnitTest. This class is expected to be declared in the UnitTest.php sourcefile.
 
-### Build Examples
+### Sample projects
 
-These samples will help you get started with Shippable. Test and
-Coverage tools used here are [phpunit](http://phpunit.de/).
+TODO - update section
 
-[PHP Sample](https://github.com/shippableSamples/sample_php)
-
-[PHP Sample with Memcached](https://github.com/shippableSamples/sample_php_memcached)
-
-[PHP Sample with MongoDB](https://github.com/shippableSamples/sample_php_mongo)
-
-[PHP Sample with MySQL](https://github.com/shippableSamples/sample_php_mysql)
-
-[PHP Sample with Nginx](https://github.com/shippableSamples/sample_php_nginx)
-
-[PHP Sample with Redis](https://github.com/shippableSamples/sample_php_redis)
-
-We need the yml file to analyze the project details. So add the
-shippable.yml file to the root of your repo by specifying:
-
-**language :** Specify the language used to create the project. php is
-used in this sample project.
-
-**php :** Specify the runtime against which your build needs to run
-using **php** tag. The sample project uses “5.4".
-
-**script :** Specify the command to run the test and coverage using
-script key and export the generated junit test output to
-shippable/testresults folder and xml coverage output to
-shippable/codecoverage foldet to get the visualization of reports.
-
-**notification alerts:** Email notifications are disabled in this sample
-project.
-
-This is the complete yml file for sample_php project:
-
-```yaml
-language: php
-
-php:
-  - 5.4
-
-before_script:
-  - mkdir -p shippable/codecoverage
-  - mkdir -p shippable/testresults
-
-script:
-  - phpunit --log-junit shippable/testresults/junit.xml --coverage-xml shippable/codecoverage tests/calculator_test.php
-
-notifications:
-  email: false
-```
-
-Create a project by enabling the repo sample_php and run it using an
-Ubuntu minion. Once the build finishes execution, you can check for the
-console output, test and code coverage output on the respective build’s
-tab.
-
-### Build Image
-
-The following build images are available for php
-
-1.  [shippableimages/ubuntu1204_php](https://registry.hub.docker.com/u/shippableimages/ubuntu1204_php) ([Dockerfile](https://github.com/shippableImages/ubuntu1204_php/blob/master/Dockerfile))
-2.  [shippableimages/ubuntu1404_php](https://registry.hub.docker.com/u/shippableimages/ubuntu1404_php) ([Dockerfile](https://github.com/shippableImages/ubuntu1404_php/blob/master/Dockerfile))
-
-The php versions available in these images are:
-
-- 5.3
-- 5.4
-- 5.5
-- 5.6
-
-Go to your **Project Page**, click on **Settings** and choose the following image:
-
-`Pull Image from: shippableimages/ubuntu1204_php`
-
-Activate the required version in before_install section to run your build against the correct version of
-php.
-
-A sample yml that helps you getting started with php image:
-
-```bash
-language: php
-
-php:
-  - 5.3
-
-# Activate the required php version
-before_install:
-  - export PATH=$HOME/.phpenv/bin:$HOME/.phpenv/extensions:$PATH && eval "$(phpenv init -)"
-  - phpenv global $SHIPPABLE_PHP_VERSION
-  - php --version
-
-script:
-  - phpunit  tests/calculator_test.php
-```
-
-Refer [sample_ubuntu1204_php](https://github.com/shippableSamples/sample_ubuntu1204_php)
-on github for more details.
-
-### PHP extensions
-
-Our minions are pre-installed with the following PHP extensions:
-
-1. [amqp.so](http://php.net/amqp)
-2. [apc.so](http://php.net/apc)
-3. [memcache.so](http://php.net/memcache)
-4. [memcached.so](http://php.net/memcached)
-5. [mongo.so](http://php.net/mongo)
-6. [redis.so](http://pecl.php.net/package/redis)
-7. [xdebug.so](http://xdebug.org/)
-8. [zmq.so](http://in1.php.net/manual/en/book.zmq.php)
-
-You will have to add **extension=<extension>.so** to php.ini file to
-enable the extension. For example, configure your yml file as shown
-below to enable redis.so.
-
-```
-echo "extension = redis.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
-```
-
-It is also possible to install custom PHP extensions using [PECL](http://pecl.php.net/):
-
-```
-pecl install <extension>
-```
-
-PECL will automatically enable the extension at the end of the
-installation.
 
 ## Python
 
-This section helps you to configure the yml file for your python project.
+### Standard build image(s)
+By default, we will run your Python build using our standard ubuntu 14.04 Python image pre-installed with latest versions of all supported tools and services. The image is called u14pytall and the Dockerfile is in our [GitHub dry-dock repository](https://github.com/dry-dock/u14pytall). The Docker image will be pulled from our [drydock repo on Docker Hub](https://hub.docker.com/r/drydock/u14pytall/)
 
-- Set the appropriate language and the version number. You can test against multiple versions for a single push by adding more entries. Python minions use `python` by default to set the version.
+The default build image for Python has the following versions installed:
+
+* 2,7
+* 2.7
+* 3.2
+* 3.3
+* 3.4
+* 3.5
+* pypy
+
+In addition we have the following additional standard Python images:
+
+* u12pyt    
+    * [GitHub](https://github.com/dry-dock/u12pyt)    
+    * [Docker Hub](https://hub.docker.com/r/drydock/u12pyt/)
+* u14pyt    
+    * [GitHub](https://github.com/dry-dock/u14pyt)    
+    * [Docker Hub](https://hub.docker.com/r/drydock/u14pyt/)
+* u12pytpls    
+    * [GitHub](https://github.com/dry-dock/u12pytpls)    
+    * [Docker Hub](https://hub.docker.com/r/drydock/u12pytpls/)
+* u14pytpls    
+    * [GitHub](https://github.com/dry-dock/u14pytpls)    
+    * [Docker Hub](https://hub.docker.com/r/drydock/u14pytpls/) 
+* u12pytall    
+    * [GitHub](https://github.com/dry-dock/u12pytall)    
+    * [Docker Hub](https://hub.docker.com/r/drydock/u12pytall/)
+
+You can use any custom build image for your project by following instructions in our [yml configuration section](ci_configure.md).
+
+### yml config
+
 
 ```
 # language setting
@@ -850,7 +478,7 @@ python:
 
 - We support different versions of python like 2.6, 2.7, 3.2, 3.3, 3.4
   and pypy.
-- Install dependencies for your project using the **install** key.
+- Install dependencies for your project using the `install` key.
 
 ```
 install: "pip install -r requirements.txt --use-mirrors"
@@ -858,7 +486,7 @@ install: "pip install -r requirements.txt --use-mirrors"
 
 ### Test scripts
 
-Use the **script** key in the shippable.yml file to specify what command to run tests with.
+Use the `script` key in the shippable.yml file to specify what command to run tests with.
 
 ```
 # command to run tests
@@ -884,141 +512,46 @@ install:
 >
 > We are setting multiple versions here which means a single push to repo will trigger multiple builds.
 
-### Build Examples
+### Sample projects
 
-These samples will help you get started with Shippable. Test and
-Coverage tools used here are [nose](https://pypi.python.org/pypi/nose)
-and [coverage 3.7](https://pypi.python.org/pypi/coverage/).
 
-[Python Sample](https://github.com/shippableSamples/sample_python)
 
-[Python Sample with MySQL](https://github.com/shippableSamples/sample_python_mysql)
-
-[Python Sample with Postgresql](https://github.com/shippableSamples/sample_python_postgres)
-
-[Python Sample with MongoDB](https://github.com/shippableSamples/sample_python_mongodb)
-
-[Python Sample with CouchDB](https://github.com/shippableSamples/sample-python-couchdb)
-
-[Python Sample with RethinkDB](https://github.com/shippableSamples/sample-python-rethinkdb)
-
-[Python Sample with Neo4j](https://github.com/shippableSamples/sample_python_neo4j)
-
-[Python Sample with Coveralls](https://github.com/shippableSamples/sample_python_coveralls)
-
-[Python Sample with Elasticsearch](https://github.com/shippableSamples/sample_python_elasticsearch)
-
-[Python Sample with Memcache](https://github.com/shippableSamples/sample_python_memcache)
-
-[Python Sample with RabbitMQ](https://github.com/shippableSamples/sample_python_rabbitmq)
-
-[Python Sample with Redis](https://github.com/shippableSamples/sample_python_redis)
-
-[Python Sample with SQLlite](https://github.com/shippableSamples/sample_python_sqllite)
-
-Keep the output generated for test and code coverage in the special
-folder Shippable/testresults and Shippable/codecoverage to get parsed
-reports parsed and to get a visualization of the reports.The test
-results must be generated in Junit format.
-
-We need the yml file to analyze the project details. Add the
-shippable.yml file to the root of your repo by specifying:
-
-**language :** Specify the language used to create the project. Python
-is used in this sample project.
-
-**version number :** Specify the version numbers against which your
-build needs to run. The sample project uses "2.7".
-
-**install :** Install the required dependencies for your repo here.
-
-**script :** Specify the command to run the test and coverage and save
-the results to their respective shippable folders. If you have not
-created the folders, then you can create it using the before_script
-key.
-
-**Notification alerts:** Email notifications are added to get the alerts
-about the build status.
-
-Here is the complete yml file for sample_python project.
-
-```yaml
-language: python
-
-python:
-   - 2.7
-
-install:
-   - pip install -r requirements.txt
-
-# Make folders for the reports
-
-before_script:
-   - mkdir -p shippable/testresults
-   - mkdir -p shippable/codecoverage
-
-script:
-   - nosetests test.py --with-xunit --xunit-file=shippable/testresults/nosetests.xml
-   - which python && coverage run --branch test.py
-   - which python && coverage xml -o shippable/codecoverage/coverage.xml test.py
-```
-
-Enable the repo sample_python and run it using an Ubuntu minion. Once
-the build finishes execution, you can check for the console output, test
-and codecoverage results on the respective build's page.
-
-### Build Image
-
-The following build images are available for python :
-
-1.  [shippableimages/ubuntu1204_python](https://registry.hub.docker.com/u/shippableimages/ubuntu1204_python) ([Dockerfile](https://github.com/shippableImages/ubuntu1204_python/blob/master/Dockerfile))
-2.  [shippableimages/ubuntu1404_python](https://registry.hub.docker.com/u/shippableimages/ubuntu1404_python) ([Dockerfile](https://github.com/shippableImages/ubuntu1404_python/blob/master/Dockerfile))
-
-The python versions available in these images are:
-
-- 2.7.3
-- 3.3.5
-- 3.4.1
-
-Go to your **Project Page**, click on **Settings** and choose the following image:
-
-`Pull Image from : shippableimages/ubuntu1204_python`
-
-Activate the appropriate virtual environment in before_install section to run your build against the
-correct version of python. You can use **$SHIPPABLE_PYTHON**
-environment variable to specify python versions.
-
-A sample yml that helps you getting started with python image:
-
-```yaml
-language: python
-
-python:
-  - 2.7
-  - 3.3
-  - 3.4
-
-before_install:
-#  set up a virtualenv and activate the python version that you want to use
-  - mkdir -p $HOME/bldve/
-  - virtualenv -p $SHIPPABLE_PYTHON  $HOME/bldve/
-  - source $HOME/bldve/bin/activate
-
-install:
-#install the required dependencies
-  - pip install -r requirements.txt
-
-script:
-  - python test.py
-```
-
-Refer [sample_ubuntu1204_python](https://github.com/shippableSamples/sample_ubuntu1204_python) on github for more details.
 
 ## Ruby
 
-This section helps you to set the build environment and other configuration specific to Ruby projects.
+### Standard build image(s)
+By default, we will run your Ruby build using our standard ubuntu 14.04 Ruby image pre-installed with latest versions of all supported tools and services. The image is called u14ruball and the Dockerfile is in our [GitHub dry-dock repository](https://github.com/dry-dock/u14ruball). The Docker image will be pulled from our [drydock repo on Docker Hub](https://hub.docker.com/r/drydock/u14ruball/)
 
-- Set the appropriate language and version number. You can test against multiple versions for a single push by adding more entries. Ruby minions use `rvm` by default to set the version
+The default build image for Ruby has the following versions installed:
+
+* 1.8,7
+* 1.9.2
+* 1.9.3
+* 2.0
+* 2.1.x
+* 2.2.x
+
+In addition we have the following additional standard Ruby images:
+
+* u12rub    
+    * [GitHub](https://github.com/dry-dock/u12rub)    
+    * [Docker Hub](https://hub.docker.com/r/drydock/u12rub/)
+* u14rub    
+    * [GitHub](https://github.com/dry-dock/u14rub)    
+    * [Docker Hub](https://hub.docker.com/r/drydock/u14rub/)
+* u12rubpls    
+    * [GitHub](https://github.com/dry-dock/u12rubpls)    
+    * [Docker Hub](https://hub.docker.com/r/drydock/u12rubpls/)
+* u14rubpls    
+    * [GitHub](https://github.com/dry-dock/u14rubpls)    
+    * [Docker Hub](https://hub.docker.com/r/drydock/u14rubpls/) 
+* u12ruball    
+    * [GitHub](https://github.com/dry-dock/u12ruball)    
+    * [Docker Hub](https://hub.docker.com/r/drydock/u12ruball/)
+
+You can use any custom build image for your project by following instructions in our [yml configuration section](ci_configure.md).
+
+### yml config
 
 ```
 # language setting
@@ -1043,7 +576,7 @@ rvm:
 
 > **Note**
 >
-> We are setting multiple versions of Ruby here which means a single push to repo will trigger multiple builds.
+> Since multiple versions of Ruby are specified in the above example, a single push to the repository will trigger multiple builds.
 
 -  Though we pre-install only a few versions of Ruby, all versions of Ruby are supported. As long as they are available as a binary for Ubuntu 12.04, you can specify custom patchlevels.
 
@@ -1115,141 +648,43 @@ before_install:
 - gem --version
 ```
 
-### Build Examples
+### Sample projects
 
-These samples will help you get started with Shippable. Test and
-Coverage tools used here are [simplecov](http://rubydoc.info/gems/simplecov/) and
-[RSpec](http://rspec.info/).
 
-[Ruby Sample](https://github.com/shippableSamples/sample_ruby)
 
-[Ruby Sample with Neo4j](https://github.com/shippableSamples/sample_ruby_neo4j)
-
-[Ruby Sample with Cassandra](https://github.com/shippableSamples/sample_ruby_cassandra)
-
-[Ruby Sample with CouchDB](https://github.com/shippableSamples/sample-ruby-couchdb)
-
-[Ruby Sample with RethinkDB](https://github.com/shippableSamples/sample-ruby-rethinkdb)
-
-[Ruby Sample with RabbitMQ](https://github.com/shippableSamples/sample_ruby_rabbitmq)
-
-We need the yml file to analyze the project details. So add the
-shippable.yml file to the root of your repo by specifying the following
-details:
-
-**language :** Specify the language used to create the project. Ruby is
-used in this sample code.
-
-**version number :** Specify the platform version using **rvm:**. This
-sample project uses 1.9.2
-
-**env:** Keep the test and code coverage output in the special folders
-Shippable/testresults and Shippable/codecoverage to get parsed reports.
-
-**notification alerts:** Email notifications are added to get alerts
-about the build status.
-
-Here is the complete yml file for sample_ruby project:
-
-```yaml
-language: ruby
-rvm:
-  - 1.9.2
-env:
-  - CI_REPORTS=shippable/testresults COVERAGE_REPORTS=shippable/codecoverage
-notifications:
-  email:
-    - exampleone@org.com
-# ensure the test output and coverage dirs are created
-before_script:
-  - mkdir -p shippable/testresults
-# write the rspec tests to the output dir
-script:
-  - rspec -f JUnit -o shippable/testresults/results.xml
-notifications:
- email:
-     recipients:
-         - exampleone@org.com
-         - exampletwo@org.com
-```
-
-Enable the repo sample_ruby and run it using an Ubuntu minion. Once the
-build finishes execution, you can check for the console output, test and
-codecoverage results on the respective build's page.
-
-### Build Image
-
-The following build images are available for ruby:
-
-1. [shippableimages/ubuntu1204_ruby](https://registry.hub.docker.com/u/shippableimages/ubuntu1204_ruby) ([Dockerfile](https://github.com/shippableImages/ubuntu1204_ruby/blob/master/Dockerfile))
-2. [shippableimages/ubuntu1404_ruby](https://registry.hub.docker.com/u/shippableimages/ubuntu1404_ruby) ([Dockerfile](https://github.com/shippableImages/ubuntu1404_ruby/blob/master/Dockerfile))
-
-The ruby versions available in these images are:
-
-- 1.8.7
-- 1.9.2
-- 1.9.3
-- 2.0.0
-- 2.1.1
-- jruby
-- ruby-head
-
-Go to your **Project Page**, click on **Settings** and choose the following image:
-
-`Pull Image from : shippableimages/ubuntu1204_ruby`
-
-Activate rvm in before_install or install section to run your build against the correct version of ruby.
-
-A sample yml that helps you getting started with ruby image:
-
-```yaml
-language: ruby
-
-rvm:
-  - 2.1.1
-
-# activate rvm
-before_install:
-  - source ~/.rvm/scripts/rvm
-  - rvm install $SHIPPABLE_RUBY --verify-downloads 1
-  - source ~/.bashrc && ~/.rvm/scripts/rvm && rvm use $SHIPPABLE_RUBY
-
-#install the dependencies
-install:
-  - bundle install --gemfile="Gemfile"
-  - ruby -v
-
-script:
-  - bundle exec rake
-```
-
-Refer [sample_ubuntu1204_ruby](https://github.com/shippableSamples/sample_ubuntu1204_ruby)
-on github for more details.
-
--------
 
 ## Scala
 
-This section helps you specify the build environment and other
-configuration specific to Scala projects.
+### Standard build image(s)
+By default, we will run your Scala build using our standard ubuntu 14.04 Scala image pre-installed with latest versions of all supported tools and services. The image is called u14scaall and the Dockerfile is in our [GitHub dry-dock repository](https://github.com/dry-dock/u14scaall). The Docker image will be pulled from our [drydock repo on Docker Hub](https://hub.docker.com/r/drydock/u14scaall/)
 
-- Set the appropriate language and version number. You can test
-  against multiple versions for a single push by adding more entries.
-  Scala minions use `scala` by default to set the version.
+The default build image for Scala has the following versions installed:
 
-- We support SBT, oraclejdk8, oraclejdk7, openjdk6 and openjdk7. Specify Scala versions like 2.8.x, 2.9.x and 2.10.x in the shippable.yml file as shown below.
+* 2.9.x
+* 2.10.x
+* 2.11.x
 
-```
-language: scala
-scala:
-  - 2.8.2
-  - 2.9.2
-```
+In addition we have the following additional standard Scala images:
 
--   Scala builder assumes dependency management based on projects like
-    Maven, Gradle or SBT and it will pull down project dependencies
-    automatically before running tests.
--   To test against multiple JDKs, use jdk tags. For example, to test against the oraclejdk8, oraclejdk7, openjdk6 and openjdk7
+* u12sca    
+    * [GitHub](https://github.com/dry-dock/u12sca)    
+    * [Docker Hub](https://hub.docker.com/r/drydock/u12sca/)
+* u14sca    
+    * [GitHub](https://github.com/dry-dock/u14sca)    
+    * [Docker Hub](https://hub.docker.com/r/drydock/u14sca/)
+* u12scapls    
+    * [GitHub](https://github.com/dry-dock/u12scapls)    
+    * [Docker Hub](https://hub.docker.com/r/drydock/u12scapls/)
+* u14scapls    
+    * [GitHub](https://github.com/dry-dock/u14scapls)    
+    * [Docker Hub](https://hub.docker.com/r/drydock/u14scapls/) 
+* u12scaall    
+    * [GitHub](https://github.com/dry-dock/u12scaall)    
+    * [Docker Hub](https://hub.docker.com/r/drydock/u12scaall/)
+
+You can use any custom build image for your project by following instructions in our [yml configuration section](ci_configure.md).
+
+The Scala builder assumes dependency management based on projects like Maven, Gradle or SBT and it will pull down project dependencies automatically before running tests. To test against multiple JDKs, use jdk tags. For example, to test against the oraclejdk8, oraclejdk7, openjdk6 and openjdk7
 
 ```
 jdk:
@@ -1267,67 +702,5 @@ jdk:
 sbt ++$SHIPPABLE_SCALA_VERSION test
 ```
 
-### Build Examples
+### Sample projects
 
-This sample will help you get started with Shippable. Testing framework used here is [ScalaTest](http://scalatest.org/).
-
-[Scala Sample](https://github.com/shippableSamples/sample_scala)
-
-[Scala Sample with MongoDB](https://github.com/shippableSamples/sample_scala_mongo)
-
-[Scala Sample with PostgreSQL](https://github.com/shippableSamples/sample_scala_postgres)
-
-Keep the test and code coverage output in the special folders
-Shippable/testresults and Shippable/codecoverage to get the reports
-parsed. The test report must be in Junit format.
-
-We need the yml file to analyze your project details . So add the
-shippable.yml file to the root of your repo by specifying :
-
-**language :** Scala is used in this sample project
-
-**version number :** 2.10.2 is the version used in this sample project.
-
-**notification alerts:** Email notifications are added to get alerts
-about the build status.
-
-Here is the complete yml file for sample_scala project
-
-```yaml
-language: scala
-scala:
-  - 2.10.2
-```
-
-Enable the repo sample_scala and run it using an Ubuntu minion. Once
-the build finishes execution, you can check for the console output, test
-and codecoverage results on the respective build's page.
-
-### Build Image
-
-The build images available for scala:
-
-1. [shippableimages/ubuntu1204_scala](https://registry.hub.docker.com/u/shippableimages/ubuntu1204_scala) ([Dockerfile](https://github.com/shippableImages/ubuntu1204_scala/blob/master/Dockerfile))
-2. [shippableimages/ubuntu1404_scala](https://registry.hub.docker.com/u/shippableimages/ubuntu1404_scala) ([Dockerfile](https://github.com/shippableImages/ubuntu1404_scala/blob/master/Dockerfile))
-
-The scala version available in the image is 2.11.2
-
-Go to your **Project Page**, click on **Settings** and choose the following image:
-
-`Pull Image from : shippableimages/ubuntu1204_scala`
-
-A sample yml that helps you getting started with scala image:
-
-```yaml
-language: scala
-
-before_script:
-  - export PATH=$PATH:$SHIPPABLE_REPO_DIR
-
-script:
-  - export SBT_OPTS="-XX:+CMSClassUnloadingEnabled -XX:PermSize=256M -XX:MaxPermSize=512M"
-  - sbt clean scoverage:test
-```
-
-Refer [sample_ubuntu1204_scala](https://github.com/shippableSamples/sample_ubuntu1204_scala)
-on github for more details.
